--- a/RevitBimbot.csproj
+++ b/RevitBimbot.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Bimbot</RootNamespace>
     <AssemblyName>RevitBimbot</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;R2018, DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;R2019, DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -159,8 +159,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdWindows">
-      <HintPath>..\..\..\Program Files\Autodesk\Revit 2018\AdWindows.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\Program Files\Autodesk\Revit 2019\AdWindows.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -171,14 +170,13 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="RevitAPI">
-      <HintPath>..\..\..\Program Files\Autodesk\Revit 2018\RevitAPI.dll</HintPath>
+      <HintPath>..\..\..\Program Files\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
     </Reference>
-    <Reference Include="RevitAPIIFC, Version=17.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Program Files\Autodesk\Revit 2018\RevitAPIIFC.dll</HintPath>
+    <Reference Include="RevitAPIIFC">
+      <HintPath>..\..\..\Program Files\Autodesk\Revit 2019\RevitAPIIFC.dll</HintPath>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\Program Files\Autodesk\Revit 2018\RevitAPIUI.dll</HintPath>
+      <HintPath>..\..\..\Program Files\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -227,12 +225,24 @@
     <Compile Include="BimbotUI\ServiceAddFormOld.Designer.cs">
       <DependentUpon>ServiceAddFormOld.cs</DependentUpon>
     </Compile>
+    <Compile Include="BimbotUI\ServiceAddWindow.xaml.cs">
+      <DependentUpon>ServiceAddWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="BimbotUI\ServicesPanel.xaml.cs">
       <DependentUpon>ServicesPanel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BimbotUI\TestUIForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BimbotUI\TestUIForm.Designer.cs">
+      <DependentUpon>TestUIForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ExternalEventImportIfcSnippet.cs" />
+    <Compile Include="Objects\OAuthRegisterResponse.cs" />
     <Compile Include="Objects\ServiceListResponse.cs" />
     <Compile Include="Objects\ServiceProfile.cs" />
     <Compile Include="Objects\ServiceResult.cs" />
+    <Compile Include="ExternalEventRunServices.cs" />
     <Compile Include="Utils\DeserializationFix.cs" />
     <Compile Include="ExternalEventChangeDocument.cs" />
     <Compile Include="ExternalEventChangeView.cs" />
@@ -293,6 +303,9 @@
     <EmbeddedResource Include="BimbotUI\ServiceModifyForm.resx">
       <DependentUpon>ServiceModifyForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="BimbotUI\TestUIForm.resx">
+      <DependentUpon>TestUIForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -303,6 +316,8 @@
     <None Include="packages.config" />
     <None Include="Resources\BIMserver-BimBot.png" />
     <None Include="Resources\BimServerLogo.ico" />
+    <Resource Include="Resources\Add.png" />
+    <Resource Include="Resources\Remove.png" />
     <Content Include="Resources\BIMserver-Info.png" />
     <Content Include="RevitBimbot.addin">
       <SubType>Designer</SubType>
@@ -317,6 +332,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="BimbotUI\ServiceAddWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="BimbotUI\ServicesPanel.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -330,7 +349,7 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy /i /y "$(TargetPath)" "c:\Program Files\RevitBimbot\"
 xcopy /i /y "$(TargetDir)Xceed.*" "c:\Program Files\RevitBimbot\"
-xcopy /i/y "$(SolutionDir)RevitBimbot.addin" "C:\Users\helmpwvd\AppData\Roaming\Autodesk\Revit\Addins\2018\"</PostBuildEvent>
+xcopy /i/y "$(SolutionDir)RevitBimbot.addin" "C:\Users\helmpwvd\AppData\Roaming\Autodesk\Revit\Addins\2019\"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
