--- a/RevitBimbot.csproj
+++ b/RevitBimbot.csproj
@@ -18,10 +18,11 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;R2019, DEBUG</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;R2019, DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +31,7 @@
     <DefineConstants>TRACE;R2018</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug2016|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -157,9 +159,23 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>PimCertificate.cer</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdWindows">
       <HintPath>..\..\..\Program Files\Autodesk\Revit 2019\AdWindows.dll</HintPath>
+    </Reference>
+    <Reference Include="IFCExportUI">
+      <HintPath>..\..\..\Program Files\Autodesk\Revit 2019\AddIns\IFCExporterUI\IFCExportUI.dll</HintPath>
+      <Aliases>IFCExportUI</Aliases>
+    </Reference>
+    <Reference Include="IFCExportUIOverride">
+      <HintPath>..\..\..\ProgramData\Autodesk\ApplicationPlugins\IFC 2019.bundle\Contents\2019\IFCExportUIOverride.dll</HintPath>
+      <Aliases>IFCExportUIOverride</Aliases>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -219,14 +235,11 @@
     <Compile Include="Bcf\Visinfo.cs" />
     <Compile Include="Bcf\BcfFile.cs" />
     <Compile Include="BimbotDocument.cs" />
-    <Compile Include="BimbotUI\ServiceAddFormOld.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="BimbotUI\ServiceAddFormOld.Designer.cs">
-      <DependentUpon>ServiceAddFormOld.cs</DependentUpon>
-    </Compile>
     <Compile Include="BimbotUI\ServiceAddWindow.xaml.cs">
       <DependentUpon>ServiceAddWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="BimbotUI\ProtectServiceWindow.xaml.cs">
+      <DependentUpon>ProtectServiceWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="BimbotUI\ServicesPanel.xaml.cs">
       <DependentUpon>ServicesPanel.xaml</DependentUpon>
@@ -238,9 +251,11 @@
       <DependentUpon>TestUIForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ExternalEventImportIfcSnippet.cs" />
+    <Compile Include="ExternalEventsContainer.cs" />
+    <Compile Include="Objects\JsonProviderList.cs" />
     <Compile Include="Objects\OAuthRegisterResponse.cs" />
-    <Compile Include="Objects\ServiceListResponse.cs" />
-    <Compile Include="Objects\ServiceProfile.cs" />
+    <Compile Include="Objects\JsonServiceList.cs" />
+    <Compile Include="Objects\ResultItem.cs" />
     <Compile Include="Objects\ServiceResult.cs" />
     <Compile Include="ExternalEventRunServices.cs" />
     <Compile Include="Utils\DeserializationFix.cs" />
@@ -248,12 +263,6 @@
     <Compile Include="ExternalEventChangeView.cs" />
     <Compile Include="BimbotUI\ResultsPanel.xaml.cs">
       <DependentUpon>ResultsPanel.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="BimbotUI\ServiceAddForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="BimbotUI\ServiceAddForm.Designer.cs">
-      <DependentUpon>ServiceAddForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Objects\TriggerEnum.cs" />
     <Compile Include="RevitBimbot.cs" />
@@ -263,13 +272,7 @@
     <Compile Include="BimbotUI\AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="BimbotUI\ServiceModifyForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="BimbotUI\ServiceModifyForm.Designer.cs">
-      <DependentUpon>ServiceModifyForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Objects\ServiceProviderResponse.cs" />
+    <Compile Include="Objects\Provider.cs" />
     <Compile Include="Objects\Service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -282,26 +285,14 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Utils\IfcExportConfigurationCustom.cs" />
     <Compile Include="Utils\IfcGuid.cs" />
     <Compile Include="Utils\IfcUtils.cs" />
     <Compile Include="Utils\RevitUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="BimbotUI\AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="BimbotUI\ServiceAddFormOld.resx">
-      <DependentUpon>ServiceAddFormOld.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="BimbotUI\ServiceAddForm.resx">
-      <DependentUpon>ServiceAddForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="BimbotUI\ServiceModifyForm.resx">
-      <DependentUpon>ServiceModifyForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BimbotUI\TestUIForm.resx">
       <DependentUpon>TestUIForm.cs</DependentUpon>
@@ -314,11 +305,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="PimCertificate.cer" />
     <None Include="Resources\BIMserver-BimBot.png" />
     <None Include="Resources\BimServerLogo.ico" />
     <Resource Include="Resources\Add.png" />
     <Resource Include="Resources\Remove.png" />
+    <None Include="Resources\Register.png" />
     <Content Include="Resources\BIMserver-Info.png" />
+    <None Include="Resources\Modify.png" />
     <Content Include="RevitBimbot.addin">
       <SubType>Designer</SubType>
     </Content>
@@ -333,6 +327,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="BimbotUI\ServiceAddWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BimbotUI\ProtectServiceWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
