--- a/RevitBimbot.csproj
+++ b/RevitBimbot.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Bimbot</RootNamespace>
     <AssemblyName>RevitBimbot</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -163,7 +163,7 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>PimCertificate.cer</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Open Source BIM Collective.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdWindows">
@@ -304,6 +304,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Open Source BIM Collective.pfx" />
     <None Include="packages.config" />
     <None Include="PimCertificate.cer" />
     <Content Include="Resources\BIMserver-BimBot.png" />
